--- a/TSN_DEMO_07_JSON_MICRO/src/main/res/layout/activity_main.xml
+++ b/TSN_DEMO_07_JSON_MICRO/src/main/res/layout/activity_main.xml
@@ -10,15 +10,27 @@
     android:background="#203b5b"
     tools:context="MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:gravity="center"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_weight="1"
-        android:textColor="#e3ff1a"
-        android:text="@string/loading"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/loading"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#e3ff1a" />
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/button"
